docs/RECO/24.12.0/index.md
```
=== ---------------------------------------------------------------------------------------------------------+-------------- ===
  Total Size: Unknown

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi-/500MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 80/80 (complete)
  Total Size: 8.466 GB (80 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi-/500MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 24/24 (complete)
  Total Size: 5.775 GB (24 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi-/200MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 31/31 (complete)
  Total Size: 5.004 GB (31 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi-/2GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 46/46 (complete)
  Total Size: 11.021 GB (46 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi-/2GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 23/23 (complete)
  Total Size: 11.437 GB (23 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi-/100MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 4.078 GB (18 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi-/100MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 30/30 (complete)
  Total Size: 3.557 GB (30 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi-/200MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 16/16 (complete)
  Total Size: 3.726 GB (16 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi-/200MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 27/27 (complete)
  Total Size: 4.087 GB (27 files)

=== epic:/RECO/24.12.0/epic_craterlake/DIS/CC/18x275/minQ2=100 ===
  RSE: JLAB-TAPE-SE                              Files: 10224/10224 (complete)
  Total Size: 1.096 TB (10224 files)

=== epic:/RECO/24.12.0/epic_craterlake/DIS/CC/18x275/minQ2=1000 ===
  RSE: JLAB-TAPE-SE                              Files: 9710/9710 (complete)
  Total Size: 1.213 TB (9710 files)

=== epic:/RECO/24.12.0/epic_craterlake/DIS/CC/10x100/minQ2=100 ===
  RSE: JLAB-TAPE-SE                              Files: 5345/5345 (complete)
  Total Size: 721.145 GB (5345 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon-/500MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 28/28 (complete)
  Total Size: 6.249 GB (28 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/neutron/10GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 124/124 (complete)
  Total Size: 15.118 GB (124 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/neutron/10GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 96/96 (complete)
  Total Size: 15.314 GB (96 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon-/5GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 153/153 (complete)
  Total Size: 17.201 GB (153 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/neutron/1GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 17/17 (complete)
  Total Size: 2.826 GB (17 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi0/20GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 309/309 (complete)
  Total Size: 47.606 GB (309 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi+/1GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 57/57 (complete)
  Total Size: 8.773 GB (57 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi+/5GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 65/65 (complete)
  Total Size: 16.821 GB (65 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi+/10GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 215/215 (complete)
  Total Size: 23.667 GB (215 files)

=== epic:/RECO/24.12.0/epic_craterlake/DIS/NC/18x275/minQ2=10 ===
  RSE: JLAB-TAPE-SE                              Files: 9260/9260 (complete)
  Total Size: 874.319 GB (9260 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi+/10GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 131/131 (complete)
  Total Size: 21.481 GB (131 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi+/500MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 84/84 (complete)
  Total Size: 8.395 GB (84 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi+/10GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 114/114 (complete)
  Total Size: 21.215 GB (114 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/gamma/5GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 187/187 (complete)
  Total Size: 20.175 GB (187 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon+/20GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 451/451 (complete)
  Total Size: 29.263 GB (451 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon+/200MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 60/60 (complete)
  Total Size: 5.022 GB (60 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon+/200MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 112/112 (complete)
  Total Size: 5.759 GB (112 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e+/10GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 199/199 (complete)
  Total Size: 32.608 GB (199 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e+/100MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 17/17 (complete)
  Total Size: 4.514 GB (17 files)

=== epic:/RECO/24.12.0/epic_craterlake/DIS/NC/18x275/minQ2=100 ===
  RSE: JLAB-TAPE-SE                              Files: 11630/11630 (complete)
  Total Size: 1.208 TB (11630 files)

=== epic:/RECO/24.12.0/epic_craterlake/EXCLUSIVE/TCS_ABCONV/18x275/hel_plus ===
  RSE: JLAB-TAPE-SE                              Files: 2540/2540 (complete)
  Total Size: 47.689 GB (2540 files)

=== epic:/RECO/24.12.0/epic_craterlake/EXCLUSIVE/TCS_ABCONV/5x41/hel_plus ===
  RSE: JLAB-TAPE-SE                              Files: 670/670 (complete)
  Total Size: 49.782 GB (670 files)

=== epic:/RECO/24.12.0/epic_craterlake/DIS/NC/10x100/minQ2=1000 ===
  RSE: JLAB-TAPE-SE                              Files: 9059/9059 (complete)
  Total Size: 1.052 TB (9059 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi+/5GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 159/159 (complete)
  Total Size: 16.253 GB (159 files)

=== epic:/RECO/24.12.0/epic_craterlake/EXCLUSIVE/DVMP/EpIC1.0.0-1.1 ===
  RSE: JLAB-TAPE-SE                              Files: 73/73 (complete)
  Total Size: 2.167 GB (73 files)

=== epic:/RECO/24.12.0/epic_craterlake/DIS/NC/18x275/minQ2=1000 ===
  RSE: JLAB-TAPE-SE                              Files: 16394/16394 (complete)
  Total Size: 1.611 TB (16394 files)

=== epic:/RECO/24.12.0/epic_craterlake/DIS/NC/10x100/minQ2=100 ===
  RSE: JLAB-TAPE-SE                              Files: 7430/7430 (complete)
  Total Size: 903.574 GB (7430 files)

=== epic:/RECO/24.12.0/epic_craterlake/DIS/NC/5x41/minQ2=10 ===
  RSE: JLAB-TAPE-SE                              Files: 3470/3470 (complete)
  Total Size: 490.393 GB (3470 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi+/500MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 31/31 (complete)
  Total Size: 5.736 GB (31 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi+/100MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 16/16 (complete)
  Total Size: 3.290 GB (16 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/mu-/10GeV/etaScan ===
  RSE: JLAB-TAPE-SE                              Files: 269/269 (complete)
  Total Size: 39.946 GB (269 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/gamma/60GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 885/885 (complete)
  Total Size: 102.867 GB (885 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/gamma/10GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 385/385 (complete)
  Total Size: 30.488 GB (385 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/gamma/40GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 666/666 (complete)
  Total Size: 75.584 GB (666 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/gamma/20GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 327/327 (complete)
  Total Size: 44.137 GB (327 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon+/500MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 76/76 (complete)
  Total Size: 8.020 GB (76 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/gamma/100MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 16/16 (complete)
  Total Size: 2.196 GB (16 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/gamma/200MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 98/98 (complete)
  Total Size: 2.835 GB (98 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/gamma/2GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 59/59 (complete)
  Total Size: 9.149 GB (59 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/gamma/1GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 49/49 (complete)
  Total Size: 5.888 GB (49 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/gamma/20GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 939/939 (complete)
  Total Size: 57.073 GB (939 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon+/2GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 87/87 (complete)
  Total Size: 11.471 GB (87 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon+/1GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 50/50 (complete)
  Total Size: 9.246 GB (50 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/gamma/5GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 117/117 (complete)
  Total Size: 17.685 GB (117 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/gamma/100MeV/etaScan ===
  RSE: JLAB-TAPE-SE                              Files: 164/164 (complete)
  Total Size: 10.601 GB (164 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/gamma/20GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 477/477 (complete)
  Total Size: 52.436 GB (477 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon+/100MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 19/19 (complete)
  Total Size: 5.010 GB (19 files)

=== epic:/RECO/24.12.0/epic_craterlake/EXCLUSIVE/DIFFRACTIVE_JPSI_ABCONV/lAger3.6.1-1.0/18x275/hiAcc ===
  RSE: JLAB-TAPE-SE                              Files: 474/474 (complete)
  Total Size: 17.259 GB (474 files)

=== epic:/RECO/24.12.0/epic_craterlake/EXCLUSIVE/DIFFRACTIVE_PHI_ABCONV/Sartre/Coherent ===
  RSE: JLAB-TAPE-SE                              Files: 17487/17487 (complete)
  Total Size: 703.889 GB (17487 files)

=== epic:/RECO/24.12.0/epic_craterlake/EXCLUSIVE/DIFFRACTIVE_JPSI_ABCONV/lAger3.6.1-1.0/5x100/hiAcc ===
  RSE: JLAB-TAPE-SE                              Files: 91/91 (complete)
  Total Size: 8.848 GB (91 files)

=== epic:/RECO/24.12.0/epic_craterlake/SIDIS/pythia6-eic/1.0.0/5x41/q2_0to1 ===
  RSE: JLAB-TAPE-SE                              Files: 16399/16399 (complete)
  Total Size: 2.349 TB (16399 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi-/20GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 375/375 (complete)
  Total Size: 35.010 GB (375 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/proton/10GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 103/103 (complete)
  Total Size: 20.635 GB (103 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/proton/10GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 167/167 (complete)
  Total Size: 22.715 GB (167 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/proton/1GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 94/94 (complete)
  Total Size: 8.024 GB (94 files)

=== epic:/RECO/24.12.0/epic_craterlake/BACKGROUNDS/BEAMGAS/electron/GETaLM1.0.0-1.0/10GeV ===
  RSE: JLAB-TAPE-SE                              Files: 2994/2994 (complete)
  Total Size: 157.699 GB (2994 files)

=== epic:/RECO/24.12.0/epic_craterlake/BACKGROUNDS/BEAMGAS/proton/pythia8.306-1.0/275GeV ===
  RSE: JLAB-TAPE-SE                              Files: 13000/13000 (complete)
  Total Size: 886.822 GB (13000 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/proton/1GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 30/30 (complete)
  Total Size: 6.724 GB (30 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/proton/2GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 41/41 (complete)
  Total Size: 9.369 GB (41 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon-/200MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 26/26 (complete)
  Total Size: 5.544 GB (26 files)

=== epic:/RECO/24.12.0/epic_craterlake/BACKGROUNDS/MERGED/HEPMC_merger-1.0.2/10x100/1SignalPerFrame ===
  RSE: JLAB-TAPE-SE                              Files: 12/12 (complete)
  Total Size: 730.490 MB (12 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon-/5GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 76/76 (complete)
  Total Size: 16.296 GB (76 files)

=== epic:/RECO/24.12.0/epic_craterlake/BACKGROUNDS/MERGED/HEPMC_merger-1.0.2/10x100/RealisticSignalPerFrame ===
  RSE: JLAB-TAPE-SE                              Files: 30/30 (complete)
  Total Size: 822.652 MB (30 files)

=== epic:/RECO/24.12.0/epic_craterlake/BACKGROUNDS/SYNRAD/dataprod_rel_1.0.0/18x275 ===
  RSE: JLAB-TAPE-SE                              Files: 20/20 (complete)
  Total Size: 1.650 GB (20 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi-/5GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 127/127 (complete)
  Total Size: 16.573 GB (127 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/proton/5GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 142/142 (complete)
  Total Size: 14.942 GB (142 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/proton/1GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 27/27 (complete)
  Total Size: 6.379 GB (27 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon-/100MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 21/21 (complete)
  Total Size: 5.775 GB (21 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon+/5GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 154/154 (complete)
  Total Size: 15.721 GB (154 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon+/100MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 17/17 (complete)
  Total Size: 4.931 GB (17 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/proton/2GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 35/35 (complete)
  Total Size: 9.399 GB (35 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi-/5GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 70/70 (complete)
  Total Size: 15.956 GB (70 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon-/20GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 384/384 (complete)
  Total Size: 36.679 GB (384 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/proton/2GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 101/101 (complete)
  Total Size: 10.252 GB (101 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon-/200MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 73/73 (complete)
  Total Size: 6.352 GB (73 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon-/2GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 32/32 (complete)
  Total Size: 11.712 GB (32 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon-/2GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 90/90 (complete)
  Total Size: 12.559 GB (90 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi-/10GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 229/229 (complete)
  Total Size: 24.260 GB (229 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi-/5GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 89/89 (complete)
  Total Size: 17.214 GB (89 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi-/1GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 46/46 (complete)
  Total Size: 9.737 GB (46 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon+/10GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 125/125 (complete)
  Total Size: 20.756 GB (125 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon+/500MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 25/25 (complete)
  Total Size: 5.540 GB (25 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon+/20GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 186/186 (complete)
  Total Size: 29.646 GB (186 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon+/5GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 66/66 (complete)
  Total Size: 15.084 GB (66 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon+/500MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 34/34 (complete)
  Total Size: 5.594 GB (34 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon+/100MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 30/30 (complete)
  Total Size: 4.962 GB (30 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e+/5GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 112/112 (complete)
  Total Size: 21.628 GB (112 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e+/200MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 16/16 (complete)
  Total Size: 4.358 GB (16 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon+/20GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 235/235 (complete)
  Total Size: 33.585 GB (235 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon+/2GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 44/44 (complete)
  Total Size: 10.496 GB (44 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon+/1GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 32/32 (complete)
  Total Size: 8.101 GB (32 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon+/10GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 165/165 (complete)
  Total Size: 22.849 GB (165 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e+/500MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 31/31 (complete)
  Total Size: 6.422 GB (31 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e+/1GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 42/42 (complete)
  Total Size: 9.780 GB (42 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e+/10GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 253/253 (complete)
  Total Size: 40.331 GB (253 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e+/10GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 358/358 (complete)
  Total Size: 35.953 GB (358 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e+/500MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 90/90 (complete)
  Total Size: 8.989 GB (90 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon+/5GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 75/75 (complete)
  Total Size: 16.234 GB (75 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e+/5GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 181/181 (complete)
  Total Size: 25.976 GB (181 files)

=== epic:/RECO/24.12.0/epic_craterlake/EXCLUSIVE/TCS_ABCONV/5x41/hel_minus ===
  RSE: JLAB-TAPE-SE                              Files: 670/670 (complete)
  Total Size: 49.509 GB (670 files)

=== epic:/RECO/24.12.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.2/10x100/q2_10_20/pi+ ===
  RSE: JLAB-TAPE-SE                              Files: 187/187 (complete)
  Total Size: 12.244 GB (187 files)

=== epic:/RECO/24.12.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.2/18x275/q2_3_10/pi+ ===
  RSE: JLAB-TAPE-SE                              Files: 374/374 (complete)
  Total Size: 51.746 GB (374 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi-/20GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 527/527 (complete)
  Total Size: 30.380 GB (527 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/proton/100MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 28/28 (complete)
  Total Size: 1.443 GB (28 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/proton/5GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 63/63 (complete)
  Total Size: 14.422 GB (63 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon-/10GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 114/114 (complete)
  Total Size: 22.260 GB (114 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon-/100MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 27/27 (complete)
  Total Size: 6.515 GB (27 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon-/500MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 24/24 (complete)
  Total Size: 6.466 GB (24 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/neutron/1GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 26/26 (complete)
  Total Size: 2.987 GB (26 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi0/2GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 111/111 (complete)
  Total Size: 11.418 GB (111 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/neutron/2GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 55/55 (complete)
  Total Size: 4.759 GB (55 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi0/40GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 687/687 (complete)
  Total Size: 80.680 GB (687 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi0/100MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 30/30 (complete)
  Total Size: 2.886 GB (30 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi0/20GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 924/924 (complete)
  Total Size: 61.310 GB (924 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi0/200MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 120/120 (complete)
  Total Size: 3.473 GB (120 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi0/1GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 50/50 (complete)
  Total Size: 7.151 GB (50 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi0/200MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 16/16 (complete)
  Total Size: 3.206 GB (16 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi0/5GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 199/199 (complete)
  Total Size: 21.520 GB (199 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi0/10GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 186/186 (complete)
  Total Size: 28.315 GB (186 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e-/2GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 150/150 (complete)
  Total Size: 13.569 GB (150 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e-/20GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 956/956 (complete)
  Total Size: 65.578 GB (956 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e-/2GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 66/66 (complete)
  Total Size: 13.281 GB (66 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e-/500MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 27/27 (complete)
  Total Size: 6.319 GB (27 files)

=== epic:/RECO/24.12.0/epic_craterlake/EXCLUSIVE/DVCS_ABCONV/18x275 ===
  RSE: JLAB-TAPE-SE                              Files: 2374/2374 (complete)
  Total Size: 50.296 GB (2374 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi+/1GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 35/35 (complete)
  Total Size: 8.739 GB (35 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi+/200MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 71/71 (complete)
  Total Size: 4.975 GB (71 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi-/1GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 31/31 (complete)
  Total Size: 8.834 GB (31 files)

=== epic:/RECO/24.12.0/epic_craterlake/BACKGROUNDS/BEAMGAS/proton/pythia8.306-1.0/100GeV ===
  RSE: JLAB-TAPE-SE                              Files: 5000/5000 (complete)
  Total Size: 471.531 GB (5000 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi0/1GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 28/28 (complete)
  Total Size: 6.408 GB (28 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi0/2GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 51/51 (complete)
  Total Size: 9.455 GB (51 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi0/5GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 110/110 (complete)
  Total Size: 18.954 GB (110 files)

=== epic:/RECO/24.12.0/epic_craterlake/DIS/CC/5x41/minQ2=100 ===
  RSE: JLAB-TAPE-SE                              Files: 2270/2270 (complete)
  Total Size: 428.545 GB (2270 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/gamma/200MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 16/16 (complete)
  Total Size: 2.695 GB (16 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon+/2GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 40/40 (complete)
  Total Size: 10.823 GB (40 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e+/200MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 46/46 (complete)
  Total Size: 3.994 GB (46 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e+/5GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 129/129 (complete)
  Total Size: 22.883 GB (129 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e+/200MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 100/100 (complete)
  Total Size: 6.194 GB (100 files)

=== epic:/RECO/24.12.0/epic_craterlake/DIS/NC/5x41/minQ2=100 ===
  RSE: JLAB-TAPE-SE                              Files: 4144/4144 (complete)
  Total Size: 611.083 GB (4144 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi+/2GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 47/47 (complete)
  Total Size: 10.988 GB (47 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi+/100MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 17/17 (complete)
  Total Size: 4.227 GB (17 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/gamma/10GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 238/238 (complete)
  Total Size: 33.572 GB (238 files)

=== epic:/RECO/24.12.0/epic_craterlake/DIS/NC/5x41/minQ2=1 ===
  RSE: JLAB-TAPE-SE                              Files: 4679/4679 (complete)
  Total Size: 358.552 GB (4679 files)

=== epic:/RECO/24.12.0/epic_craterlake/DIS/NC/18x275/minQ2=1 ===
  RSE: JLAB-TAPE-SE                              Files: 8472/8472 (complete)
  Total Size: 643.186 GB (8472 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi+/500MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 23/23 (complete)
  Total Size: 5.553 GB (23 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi+/100MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 32/32 (complete)
  Total Size: 3.547 GB (32 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/gamma/2GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 111/111 (complete)
  Total Size: 10.480 GB (111 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/gamma/200MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 25/25 (complete)
  Total Size: 2.692 GB (25 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi+/2GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 40/40 (complete)
  Total Size: 11.352 GB (40 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi+/20GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 190/190 (complete)
  Total Size: 30.122 GB (190 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi+/5GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 74/74 (complete)
  Total Size: 15.674 GB (74 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/gamma/1GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 35/35 (complete)
  Total Size: 5.591 GB (35 files)

=== epic:/RECO/24.12.0/epic_craterlake/EXCLUSIVE/TCS_ABCONV/18x275/hel_minus ===
  RSE: JLAB-TAPE-SE                              Files: 2540/2540 (complete)
  Total Size: 47.590 GB (2540 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/gamma/100MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 17/17 (complete)
  Total Size: 2.127 GB (17 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/gamma/100MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 31/31 (complete)
  Total Size: 2.231 GB (31 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/gamma/1GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 41/41 (complete)
  Total Size: 6.504 GB (41 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/gamma/500MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 22/22 (complete)
  Total Size: 3.947 GB (22 files)

=== epic:/RECO/24.12.0/epic_craterlake/EXCLUSIVE/TCS_ABCONV/10x100/hel_minus ===
  RSE: JLAB-TAPE-SE                              Files: 4979/4979 (complete)
  Total Size: 139.014 GB (4979 files)

=== epic:/RECO/24.12.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.2/5x41/q2_20_35/K+Lambda ===
  RSE: JLAB-TAPE-SE                              Files: 251/251 (complete)
  Total Size: 30.087 GB (251 files)

=== epic:/RECO/24.12.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.2/18x275/q2_10_20/pi+ ===
  RSE: JLAB-TAPE-SE                              Files: 245/245 (complete)
  Total Size: 34.275 GB (245 files)

=== epic:/RECO/24.12.0/epic_craterlake/SIDIS/D0_ABCONV/pythia8.306-1.1/10x100/q2_1/hiDiv ===
  RSE: JLAB-TAPE-SE                              Files: 1879/1879 (complete)
  Total Size: 156.399 GB (1879 files)

=== epic:/RECO/24.12.0/epic_craterlake/SIDIS/D0_ABCONV/pythia8.306-1.1/10x100/q2_100/hiDiv ===
  RSE: JLAB-TAPE-SE                              Files: 1869/1869 (complete)
  Total Size: 204.638 GB (1869 files)

=== epic:/RECO/24.12.0/epic_craterlake/SIDIS/pythia6-eic/1.0.0/10x100/q2_0to1 ===
  RSE: JLAB-TAPE-SE                              Files: 32896/32896 (complete)
  Total Size: 3.414 TB (32896 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi-/10GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 113/113 (complete)
  Total Size: 21.659 GB (113 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi-/1GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 35/35 (complete)
  Total Size: 8.755 GB (35 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/proton/500MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 29/29 (complete)
  Total Size: 6.138 GB (29 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/proton/10GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 125/127 (incomplete)
  Total Size: 20.827 GB (127 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/proton/5GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 70/70 (complete)
  Total Size: 15.313 GB (70 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi-/500MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 31/31 (complete)
  Total Size: 6.057 GB (31 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/proton/200MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 25/25 (complete)
  Total Size: 1.964 GB (25 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi-/10GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 135/135 (complete)
  Total Size: 21.974 GB (135 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/proton/500MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 19/19 (complete)
  Total Size: 3.806 GB (19 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/proton/200MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 16/16 (complete)
  Total Size: 1.922 GB (16 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/proton/20GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 409/409 (complete)
  Total Size: 30.121 GB (409 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/proton/100MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 16/16 (complete)
  Total Size: 1.387 GB (16 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e+/2GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 82/82 (complete)
  Total Size: 13.556 GB (82 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e+/500MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 28/28 (complete)
  Total Size: 6.500 GB (28 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e+/1GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 70/70 (complete)
  Total Size: 11.489 GB (70 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e+/1GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 69/69 (complete)
  Total Size: 9.796 GB (69 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e+/2GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 161/161 (complete)
  Total Size: 15.819 GB (161 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e+/20GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 940/940 (complete)
  Total Size: 65.986 GB (940 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon+/1GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 34/34 (complete)
  Total Size: 8.079 GB (34 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e+/100MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 31/31 (complete)
  Total Size: 3.317 GB (31 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e+/20GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 348/348 (complete)
  Total Size: 51.799 GB (348 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e+/2GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 57/57 (complete)
  Total Size: 13.437 GB (57 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e+/20GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 398/398 (complete)
  Total Size: 58.891 GB (398 files)

=== epic:/RECO/24.12.0/epic_craterlake/EXCLUSIVE/DIFFRACTIVE_JPSI_ABCONV/lAger3.6.1-1.0/5x41/hiAcc ===
  RSE: JLAB-TAPE-SE                              Files: 32/32 (complete)
  Total Size: 3.285 GB (32 files)

=== epic:/RECO/24.12.0/epic_craterlake/EXCLUSIVE/DIFFRACTIVE_JPSI_ABCONV/lAger3.6.1-1.0/10x100/hiAcc ===
  RSE: JLAB-TAPE-SE                              Files: 140/140 (complete)
  Total Size: 12.473 GB (140 files)

=== epic:/RECO/24.12.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.2/18x275/q2_20_35/pi+ ===
  RSE: JLAB-TAPE-SE                              Files: 544/544 (complete)
  Total Size: 77.217 GB (544 files)

=== epic:/RECO/24.12.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.2/5x41/q2_1_10/K+Lambda ===
  RSE: JLAB-TAPE-SE                              Files: 305/305 (complete)
  Total Size: 28.385 GB (305 files)

=== epic:/RECO/24.12.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.2/5x41/q2_20_35/pi+ ===
  RSE: JLAB-TAPE-SE                              Files: 247/247 (complete)
  Total Size: 28.848 GB (247 files)

=== epic:/RECO/24.12.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.2/5x41/q2_3_10/pi+ ===
  RSE: JLAB-TAPE-SE                              Files: 216/216 (complete)
  Total Size: 22.177 GB (216 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/proton/200MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 56/56 (complete)
  Total Size: 2.549 GB (56 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/proton/20GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 256/256 (complete)
  Total Size: 34.417 GB (256 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/proton/20GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 176/176 (complete)
  Total Size: 30.491 GB (176 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/proton/100MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 17/17 (complete)
  Total Size: 1.396 GB (17 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon-/10GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 241/241 (complete)
  Total Size: 25.191 GB (241 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon-/20GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 465/465 (complete)
  Total Size: 31.873 GB (465 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/neutron/100MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 44/44 (complete)
  Total Size: 1.711 GB (44 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/neutron/10GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 169/169 (complete)
  Total Size: 17.831 GB (169 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/neutron/20GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 249/249 (complete)
  Total Size: 25.373 GB (249 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon-/500MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 54/54 (complete)
  Total Size: 8.813 GB (54 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon-/5GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 81/81 (complete)
  Total Size: 17.739 GB (81 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/neutron/2GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 36/36 (complete)
  Total Size: 4.701 GB (36 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/neutron/200MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 51/51 (complete)
  Total Size: 1.889 GB (51 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/neutron/5GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 50/50 (complete)
  Total Size: 10.546 GB (50 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon-/1GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 53/53 (complete)
  Total Size: 10.111 GB (53 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/neutron/20GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 210/210 (complete)
  Total Size: 29.657 GB (210 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/neutron/200MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 32/32 (complete)
  Total Size: 1.728 GB (32 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon-/20GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 198/198 (complete)
  Total Size: 31.736 GB (198 files)

=== epic:/RECO/24.12.0/epic_craterlake/SIDIS/pythia6-eic/1.0.0/10x275/q2_0to1 ===
  RSE: JLAB-TAPE-SE                              Files: 63899/63899 (complete)
  Total Size: 5.494 TB (63899 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi0/100MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 16/16 (complete)
  Total Size: 2.851 GB (16 files)

=== epic:/RECO/24.12.0/epic_craterlake/SIDIS/pythia6-eic/1.0.0/18x275/q2_0to1 ===
  RSE: JLAB-TAPE-SE                              Files: 71350/71350 (complete)
  Total Size: 5.709 TB (71350 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/neutron/200MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 17/17 (complete)
  Total Size: 1.737 GB (17 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi0/20GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 448/448 (complete)
  Total Size: 55.535 GB (448 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi0/2GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 53/53 (complete)
  Total Size: 10.004 GB (53 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/neutron/5GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 120/120 (complete)
  Total Size: 9.357 GB (120 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/neutron/5GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 89/89 (complete)
  Total Size: 9.314 GB (89 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi0/100MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 17/17 (complete)
  Total Size: 2.858 GB (17 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/neutron/100MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 17/17 (complete)
  Total Size: 1.592 GB (17 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/neutron/20GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 421/421 (complete)
  Total Size: 24.562 GB (421 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/neutron/1GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 84/84 (complete)
  Total Size: 2.981 GB (84 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi0/10GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 235/235 (complete)
  Total Size: 35.810 GB (235 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e-/10GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 171/171 (complete)
  Total Size: 29.887 GB (171 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e-/200MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 32/32 (complete)
  Total Size: 3.953 GB (32 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi0/10GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 350/350 (complete)
  Total Size: 32.276 GB (350 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi0/60GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 915/915 (complete)
  Total Size: 109.321 GB (915 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi0/200MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 24/24 (complete)
  Total Size: 3.185 GB (24 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e-/1GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 39/39 (complete)
  Total Size: 9.812 GB (39 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e-/1GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 82/82 (complete)
  Total Size: 9.672 GB (82 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi0/5GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 99/99 (complete)
  Total Size: 17.207 GB (99 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e-/200MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 16/16 (complete)
  Total Size: 4.375 GB (16 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e-/10GeV/etaScan ===
  RSE: JLAB-TAPE-SE                              Files: 1635/1635 (complete)
  Total Size: 183.769 GB (1635 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e-/1GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 57/57 (complete)
  Total Size: 11.202 GB (57 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e-/20GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 336/336 (complete)
  Total Size: 51.794 GB (336 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e-/20GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 760/760 (complete)
  Total Size: 59.641 GB (760 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e-/5GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 171/171 (complete)
  Total Size: 22.998 GB (171 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/gamma/5GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 95/95 (complete)
  Total Size: 15.738 GB (95 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e-/2GeV/etaScan ===
  RSE: JLAB-TAPE-SE                              Files: 379/379 (complete)
  Total Size: 68.816 GB (379 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e-/500MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 29/29 (complete)
  Total Size: 6.441 GB (29 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e-/5GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 277/277 (complete)
  Total Size: 26.205 GB (277 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi+/2GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 85/85 (complete)
  Total Size: 11.928 GB (85 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi+/200MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 16/16 (complete)
  Total Size: 3.480 GB (16 files)

=== epic:/RECO/24.12.0/epic_craterlake/EXCLUSIVE/DVCS_ABCONV/5x41 ===
  RSE: JLAB-TAPE-SE                              Files: 2381/2381 (complete)
  Total Size: 132.150 GB (2381 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/proton/500MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 31/31 (complete)
  Total Size: 3.807 GB (31 files)

=== epic:/RECO/24.12.0/epic_craterlake/DIS/CC/10x100/minQ2=1000 ===
  RSE: JLAB-TAPE-SE                              Files: 4370/4370 (complete)
  Total Size: 729.664 GB (4370 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e-/200MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 76/76 (complete)
  Total Size: 6.213 GB (76 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e-/100MeV ===
  RSE: JLAB-TAPE-SE                              Files: 1/1 (complete)
  Total Size: 230.011 MB (1 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e-/1GeV/etaScan ===
  RSE: JLAB-TAPE-SE                              Files: 210/210 (complete)
  Total Size: 41.354 GB (210 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e-/100MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 17/17 (complete)
  Total Size: 3.271 GB (17 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi+/1GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 47/47 (complete)
  Total Size: 9.755 GB (47 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e-/500MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 83/83 (complete)
  Total Size: 8.710 GB (83 files)

=== epic:/RECO/24.12.0/epic_craterlake/DIS/NC/10x100/minQ2=10 ===
  RSE: JLAB-TAPE-SE                              Files: 6679/6679 (complete)
  Total Size: 736.898 GB (6679 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi+/20GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 255/255 (complete)
  Total Size: 34.223 GB (255 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e-/5GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 112/112 (complete)
  Total Size: 21.618 GB (112 files)

=== epic:/RECO/24.12.0/epic_craterlake/DIS/NC/10x100/minQ2=1 ===
  RSE: JLAB-TAPE-SE                              Files: 5180/5180 (complete)
  Total Size: 496.509 GB (5180 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi+/20GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 466/466 (complete)
  Total Size: 29.705 GB (466 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/gamma/10GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 177/177 (complete)
  Total Size: 26.104 GB (177 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/gamma/2GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 49/49 (complete)
  Total Size: 8.514 GB (49 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/gamma/1GeV/etaScan ===
  RSE: JLAB-TAPE-SE                              Files: 200/200 (complete)
  Total Size: 29.632 GB (200 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/gamma/500MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 31/31 (complete)
  Total Size: 4.282 GB (31 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/gamma/500MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 3.986 GB (18 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon+/10GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 116/116 (complete)
  Total Size: 20.580 GB (116 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon+/200MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 17/17 (complete)
  Total Size: 4.843 GB (17 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e+/100MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 16/16 (complete)
  Total Size: 3.672 GB (16 files)

=== epic:/RECO/24.12.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.2/5x41/q2_10_20/pi+ ===
  RSE: JLAB-TAPE-SE                              Files: 110/110 (complete)
  Total Size: 12.306 GB (110 files)

=== epic:/RECO/24.12.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.2/10x100/q2_3_10/pi+ ===
  RSE: JLAB-TAPE-SE                              Files: 358/358 (complete)
  Total Size: 12.714 GB (358 files)

=== epic:/RECO/24.12.0/epic_craterlake/SIDIS/Lambda_ABCONV/pythia8.306-1.0/18x275/hiAcc ===
  RSE: JLAB-TAPE-SE                              Files: 3604/3604 (complete)
  Total Size: 380.891 GB (3604 files)

=== epic:/RECO/24.12.0/epic_craterlake/SIDIS/D0_ABCONV/pythia8.306-1.0/18x275/hiDiv ===
  RSE: JLAB-TAPE-SE                              Files: 1752/1752 (complete)
  Total Size: 203.509 GB (1752 files)

=== epic:/RECO/24.12.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.2/5x41/q2_10_20/K+Lambda ===
  RSE: JLAB-TAPE-SE                              Files: 116/116 (complete)
  Total Size: 13.063 GB (116 files)

=== epic:/RECO/24.12.0/epic_craterlake/SIDIS/D0_ABCONV/pythia8.306-1.0/18x275/hiAcc ===
  RSE: JLAB-TAPE-SE                              Files: 1672/1672 (complete)
  Total Size: 204.075 GB (1672 files)

=== epic:/RECO/24.12.0/epic_craterlake/SIDIS/Lambda_ABCONV/pythia8.306-1.0/18x275/hiDiv ===
  RSE: JLAB-TAPE-SE                              Files: 3758/3758 (complete)
  Total Size: 383.307 GB (3758 files)

=== epic:/RECO/24.12.0/epic_craterlake/EXCLUSIVE/DVCS_ABCONV/10x100 ===
  RSE: JLAB-TAPE-SE                              Files: 1300/1300 (complete)
  Total Size: 37.924 GB (1300 files)

=== epic:/RECO/24.12.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.2/10x100/q2_20_35/pi+ ===
  RSE: JLAB-TAPE-SE                              Files: 408/408 (complete)
  Total Size: 32.005 GB (408 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi-/20GeV ===
  RSE: JLAB-TAPE-SE                              Files: 1/1 (complete)
  Total Size: 158.149 MB (1 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi-/100MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 16/16 (complete)
  Total Size: 3.321 GB (16 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi-/2GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 90/90 (complete)
  Total Size: 12.082 GB (90 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon-/2GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 48/48 (complete)
  Total Size: 11.188 GB (48 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/neutron/100MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 17/17 (complete)
  Total Size: 1.405 GB (17 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/neutron/2GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 19/19 (complete)
  Total Size: 5.148 GB (19 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/neutron/500MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 31/31 (complete)
  Total Size: 1.989 GB (31 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon-/200MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 19/19 (complete)
  Total Size: 5.422 GB (19 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon-/10GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 138/138 (complete)
  Total Size: 23.029 GB (138 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon-/1GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 30/30 (complete)
  Total Size: 8.980 GB (30 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon-/1GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 33/33 (complete)
  Total Size: 8.779 GB (33 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/kaon-/100MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 56/56 (complete)
  Total Size: 6.614 GB (56 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/neutron/500MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 21/21 (complete)
  Total Size: 2.136 GB (21 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/neutron/500MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 30/30 (complete)
  Total Size: 2.130 GB (30 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi0/500MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 42/42 (complete)
  Total Size: 4.791 GB (42 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi0/500MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 19/19 (complete)
  Total Size: 4.429 GB (19 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e-/10GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 310/310 (complete)
  Total Size: 36.013 GB (310 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi0/500MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 23/23 (complete)
  Total Size: 4.430 GB (23 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi0/1GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 36/36 (complete)
  Total Size: 6.272 GB (36 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e-/10GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 250/250 (complete)
  Total Size: 40.339 GB (250 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/pi+/200MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 53/53 (complete)
  Total Size: 3.555 GB (53 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e-/2GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 134/134 (complete)
  Total Size: 15.744 GB (134 files)

=== epic:/RECO/24.12.0/epic_craterlake/SINGLE/e-/100MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 17/17 (complete)
  Total Size: 4.557 GB (17 files)

=== CAMPAIGN SUMMARY ===
  RSE: JLAB-TAPE-SE                              Total Size: 38.672 TB        Total Files: 411919
```
